news-tile component, noticeboard layout, horizontal scroll fix

--- a/css/components.css
+++ b/css/components.css
@@ -108,21 +108,24 @@
    }
 
    .category-btn.category-kids:hover {
-      background-image: url("../images/project-images/kids-bkg-compressed.jpg");
-      background-size: cover;
-      background-position: center;
+      background-image: linear-gradient(var(--color-bkg), var(--color-bkg)), url("../images/project-images/kids-bkg-compressed.jpg");
+      background-size: clamp(130px, 38%, 280px) 3.2rem, cover;
+      background-position: center, center;
+      background-repeat: no-repeat;
    }
 
    .category-btn.category-teachers:hover {
-      background-image: url("../images/project-images/professor-bkg-compressed.jpg");
-      background-size: cover;
-      background-position: center;
+      background-image: linear-gradient(var(--color-bkg), var(--color-bkg)), url("../images/project-images/professor-bkg-compressed.jpg");
+      background-size: clamp(130px, 38%, 280px) 3.2rem, cover;
+      background-position: center, center;
+      background-repeat: no-repeat;
    }
 
    .category-btn.category-researchers:hover {
-      background-image: url("../images/project-images/scientist-bkg-compressed.jpg");
-      background-size: cover;
-      background-position: center;
+      background-image: linear-gradient(var(--color-bkg), var(--color-bkg)), url("../images/project-images/scientist-bkg-compressed.jpg");
+      background-size: clamp(130px, 38%, 280px) 3.2rem, cover;
+      background-position: center, center;
+      background-repeat: no-repeat;
    }
 
    @media (min-width: 900px) {
@@ -201,13 +204,13 @@
 .outer-orbit {
   width: 100%;
   height: 100%;
-  border: 2px solid var(--color-yellow);
+  border: var(--divider-minor) solid var(--color-yellow);
 }
 
 .inner-orbit {
   width: 75%;
   height: 75%;
-  border: 2px solid var(--color-blue);
+  border: var(--divider-minor) solid var(--color-blue);
 }
 
 .moon {
@@ -234,7 +237,7 @@
 .mars-center {
   position: absolute;
   width: 60%;
-  height: 60%;
+   height: 60%;
   background-color: var(--color-red);
   color: var(--color-bkg);
   border-radius: 50%;
@@ -291,7 +294,20 @@
    ======================================== */
 
    .highlight-tile {
-      border: 5px solid var(--color-body);
+      display: flex;
+      flex-direction: column;
+      border: var(--divider-minor) solid var(--color-body);
+      width: 100%;
+      max-width: 100%;
+      max-height: none;
+      box-shadow: 10px 10px 10px var(--color-body);
+   }
+
+   @media (min-width: 900px) {
+      .highlight-tile {
+         flex-direction: row;
+         max-height: 370px;
+      }
    }
 
 /* ========================================
@@ -299,7 +315,49 @@
    ======================================== */
 
    .news-tile {
-      border: 5px solid var(--color-body);
+      display: flex;
+      flex-direction: column;
+      border: var(--divider-minor) solid var(--color-body);
+      max-width: 370px;
+      min-height: 370px;
+   }
+
+   .news-media img {
+      display: block;
+      width: 100%;
+      height: 185px;
+      object-fit: cover;
+      border-bottom: var(--divider-minor) solid var(--color-body);
+   }
+
+   .news-content {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1; /* Pushes the bottom section down if the tile grows */
+      padding: var(--space-md);
+      justify-content: space-between;
+   }
+
+   .news-bottom {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+   }
+
+   .news-text {
+      display: flex;
+      flex-direction: column;
+      padding-right: 20px; /* This is to create some space for the button on the right, but it is a bit of a hack and not ideal. */
+   }
+
+   .news-text p {
+      margin: 0;
+   }
+
+   .news-text p span {
+      font-weight: var(--font-weight-bold);
+      margin-bottom: 0.5rem;
    }
 
 /* ========================================
